fixed whitespace and viewport issues and made them responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -443,6 +443,20 @@ input:focus{
     border-radius: 20px;
 }
 
+.homepageImageh1{
+    color: #fff;
+    padding: 20px;
+}
+
+.text-box {
+    width: 300px; /* Set the width of the box */
+    padding: 20px; /* Add padding inside the box */
+    border: 1px solid #ddd; /* Add a border */
+    border-radius: 10px; /* Add rounded corners */
+    margin: 20px auto; /* Center the box on the page */
+    background-color: rgba(15, 15, 15, 0.5);
+  }
+
 .whiteFont{
     color: #fff;
     margin-top: 20px;
@@ -506,11 +520,6 @@ input:focus{
     nav ul li a{
         color: #E3170A;
     }
-
-    .navbar{
-        position: fixed; /*Make the navbar fixed when scrolled*/
-        top: 3px;
-    }
     
     .menu-icon{
         display: block;
@@ -518,10 +527,6 @@ input:focus{
         margin-right: 70px;
     }
 
-    .whiteFont{
-        background-color: rgba(51, 51, 51, 0.3);
-        font-weight: bold;
-    }
 }
 
 /*---media query for less than 600 screen size---*/
